--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,9 +2,12 @@
 @import './board.scss';
 @import './ListApp.scss';
 @import './BtnApp.scss';
+@import './InputApp.scss';
+@import './SelectApp.scss';
 @import './CardApp.scss';
 @import './CharacterCardApp.scss';
 @import './PaginationApp.scss';
+@import './SearchApp.scss';
 
 *,
 *::before,
